♻️ i18n 清理冗余键并统一模板格式

--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -434,14 +434,11 @@ mdtx.stat.lightningLength = [stat]{0}[]长度
 
 
 # hardcoded ui texts extracted from source
-mdtx.ui.records_n = 条记录，如下：\n
 mdtx.ui.the_currently_selected_area_is_empty_please_use_f_to_plan_the_area = 当前选定区域为空，请通过F规划区域
 mdtx.ui.sync_a_wave = 同步一波
 mdtx.ui.miner_ai_ore_filter = minerAI-矿物筛选器
 mdtx.ui.blueprint_code_n = 蓝图代码：\n
-mdtx.ui.mode = （模式：
 mdtx.ui.copied_print_buffer_n_arg = 复制信息版\n@
-mdtx.ui.invalid_background_image = 背景图片无效:
 mdtx.ui.message_center = 中央监控室
 mdtx.ui.lock = 锁定
 mdtx.ui.event_map_load = 事件~载入地图
@@ -473,7 +470,6 @@ mdtx.ui.please_use_java_17_or_higher_to_run_mindustryx = )。请使用Java 17或
 mdtx.ui.player_name = 玩家名:
 mdtx.ui.randomly_generated_within_this_range_near_the_target_point = 在目标点附近的这个范围内随机生成
 mdtx.ui.on = 开启
-mdtx.ui.introduction = 简介：
 mdtx.ui.slow_the_flow_of_time_to_half = 将时间流速放慢到一半
 mdtx.ui.ore_info = 矿物信息
 mdtx.ui.shortcut_fog = 雾
@@ -508,12 +504,10 @@ mdtx.ui.refresh_interval = 刷新间隔
 mdtx.ui.export_chat_history = 导出聊天记录
 mdtx.ui.scan_mode = 扫描模式
 mdtx.ui.arc_ai_configurator = ARC-AI设定器
-mdtx.ui.generated_label_2 = 已
 mdtx.ui.resistance = [purple]阻力
 mdtx.ui.load_unit = 装载单位
 mdtx.ui.unit_factory = 单位工厂
 mdtx.ui.tiles = 格
-mdtx.ui.you_were = [gold]你被[white]
 mdtx.ui.zoom_zoom = 缩放: 
 mdtx.ui.automatically_refresh_variables = 自动刷新变量
 mdtx.ui.fog_of_war = 战争迷雾
@@ -524,7 +518,6 @@ mdtx.ui.arg_shield_capacity_arg_grid_arg_recovery_arg_s_cooldown = @盾容~@格~
 mdtx.ui.staging_area = 暂存区
 mdtx.ui.there_are_no_enemies_in_this_wave = 该波次没有敌人
 mdtx.ui.shortcut_surrender_vote = [white]法
-mdtx.ui.current_wave = *** 当前波次:
 mdtx.ui.construction_suspended = 暂停建造
 mdtx.ui.waves = 波次：
 mdtx.ui.hide_all_buildings = 隐藏全部建筑
@@ -687,7 +680,6 @@ mdtx.ui.share_unit_count = 分享单位数量
 mdtx.ui.upload_failed_try_again = 上传失败，再重试一下？
 mdtx.ui.kotlin_language_standard_library = Kotlin语言标准库
 mdtx.ui.ring = 虚圆
-mdtx.ui.saved_blueprint = 已保存蓝图：
 mdtx.ui.command_mode = 指挥模式
 mdtx.ui.force_boost = 强制助推
 mdtx.ui.permanent_status = <永久状态>
@@ -718,7 +710,6 @@ mdtx.ui.could_not_check_for_updates_nplease_try_again_later = 检查更新失败
 mdtx.ui.open_release_page = 打开发布页面
 mdtx.ui.rules = 规则：
 mdtx.ui.replay_creation_time = 回放创建时间:
-mdtx.ui.share_log_n = 的分享记录\n
 mdtx.ui.sec = 秒
 mdtx.ui.copied_this_chat_record = 已导出本条聊天记录
 mdtx.ui.wall_shadow_rendering = 墙体阴影显示
@@ -728,7 +719,6 @@ mdtx.ui.total_arg_arg_arg_arg_tile_radius = 总计@@@~@格半径
 mdtx.ui.frame_rate_lock_mode_turned_off_ncurrent_game_speed_arg_times = 已关闭帧率锁定模式\n当前游戏速度：@倍
 mdtx.ui.spawn_team = 生成队伍:
 mdtx.ui.share_power_status = 分享电力情况
-mdtx.ui.copied_memory_n = [cyan]复制内存[white]\n
 mdtx.ui.logic_art_website = 逻辑画网站
 mdtx.ui.contains_ground_x = 包含(地×
 mdtx.ui.waves_suffix = 波,
@@ -755,6 +745,7 @@ mdtx.ui.template.currentVersion = 当前版本号: {0}
 mdtx.ui.template.currentWave = *** 当前波次: {0}
 mdtx.ui.template.introduction = 简介：{0}
 mdtx.ui.template.failedReadImage = 读取图片失败，请尝试更换图片\n{0}
+mdtx.ui.template.invalidBackgroundImage = 背景图片无效: {0}
 mdtx.ui.template.exportCount = 成功选取共{0}条记录，如下：\n
 mdtx.ui.template.exportHeader = 下面是[MDTX-{0}] 导出的游戏内聊天记录
 mdtx.ui.template.labelWithEmoji = {0} {1}
@@ -765,6 +756,7 @@ mdtx.ui.template.itemSelectionWidth = {0} 列
 mdtx.ui.template.javaWarnDialog = Java版本 {0} 过低，不受支持。\n[grey]该警告不存在设置，请更新Java版本。
 mdtx.ui.template.javaWarnLog = Java版本 {0} 过低，不受支持。请使用Java 17或更高版本运行MindustryX。
 mdtx.ui.template.newVersion = [green]发现新版本[]: {0}
+mdtx.ui.template.savedBlueprint = 已保存蓝图：{0}
 mdtx.ui.template.windowTitle = MindustryX | 版本号 {0} | mod启用{1}/{2}
 mdtx.ui.template.shareHeader = 这是一条来自 MDTX-{0} 的分享记录\n
 mdtx.ui.template.shareCode = <ARCxMDTX><Schem>[black]一坨兼容[] {0}
