--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -127,6 +127,13 @@ settingV2.arcTurretPlaceCheck.name = 炮台放置时显示禁建范围
 settingV2.arcTurretPlacementItem.name = 炮台显示不同弹药射程
 settingV2.githubMirror.name = GitHub镜像加速(WZ镜像)
 settingV2.githubMirror.description = 优化全球服务器列表及Mod浏览器功能
+settingV2.githubAcceleration.category = GH加速配置
+settingV2.githubAcceleration.enabled.name = 启用GitHub加速
+settingV2.githubAcceleration.enabled.description = 代理GitHub请求，支持自动重试
+settingV2.githubAcceleration.cache.name = 启用静态资源缓存
+settingV2.githubAcceleration.cacheExpire.name = 缓存过期时间
+settingV2.githubAcceleration.maxRetries.name = 最大尝试次数
+settingV2.githubAcceleration.proxies.name = 镜像站列表
 settingV2.replayRecord.name = 多人游戏录像
 settingV2.replayRecord.description = 自动录制游玩过程，输出在saves文件夹\n录像文件较大，记得整理
 settingV2.maxSchematicSize.name = 最大选择框(蓝图)大小
